# home_temperature_system

./: .gitignore  CMakeLists.txt  README.md  home_temperature_system.ino  main.ino
src/: CMakeLists.txt  temperatureSensor.cpp  temperatureSensor.h  temperatureSensor.hpp
src/rgbController/: CMakeLists.txt  rgbController.cpp  rgbController.hpp
src/temperatureSensor/: temperatureSensor.cpp  temperatureSensor.hpp
test/: CMakeLists.txt  testRGBController.cpp  testTemperatureSensor.cpp
